samples/_failures_safe/1761391795_f530e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f71b4d7.c: In function ‘main’:
./samples/SAFE/__tmp_0f71b4d7.c:134:58: error: missing terminating " character
  134 |         if (strcmp(level, "ERROR") != 0 && strcmp(level, "
      |                                                          ^
./samples/SAFE/__tmp_0f71b4d7.c:134:9: error: expected expression at end of input
  134 |         if (strcmp(level, "ERROR") != 0 && strcmp(level, "
      |         ^~
./samples/SAFE/__tmp_0f71b4d7.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f71b4d7.c:134:9: error: expected declaration or statement at end of input
